2008-06-10  Curtis Gedak  <gedakc@gmail.com>

	* src/main.cc: Changed wording of root privilege required warning.
	  - Closes GParted bug #534072

	* src/Dialog_Progress.cc: Added proper PO file plural handling.
	  - fixed a few spelling errors.

	* src/Win_GParted.cc: Added proper PO file plural handling.
	  - Closes GParted bug #315291

2008-05-10  Curtis Gedak  <gedakc@gmail.com>

	* README: Removed absolute requirement for hal-lock.

	* gparted.in: Enhanced script to use hal-lock only if it exists
	  - This removes the absolute requirement for hal-lock and
	    enables systems without HAL to use GParted.

	* configure.in: Removed check for hal-lock program (added 2008-05-08)

2008-05-08  Curtis Gedak  <gedakc@gmail.com>

	* README: Added note about hal-lock and HAL requirement

	* configure.in: Added check for hal-lock program

	* src/GParted_Core.cc: Added parse devices from /proc/partitions
	  - If /proc/partitions doesn't exist then use ped_device_probe_all
	  - Closes GParted bugs #351753, and #453555

2008-05-06  Curtis Gedak  <gedakc@gmail.com>

	* gparted.in: Fixed problem with command line devices being ignored
	  - This problem was introduced in version 0.3.7

	* configure.in: Append -svn to version for continuing development

2008-04-29  Curtis Gedak  <gedakc@gmail.com>

	* configure.in: gparted-0.3.7
	  ===================================================

2008-04-26  Curtis Gedak  <gedakc@gmail.com>

	* gparted.desktop.in.in: Removed gksu from exec line
	  - gksu is not supported in all major GNU/Linux distributions
	    (Fedora for one).
	  - Closes GParted bug #529622
	  - Reopens GParted bug #381557

	* README: Enhanced INSTALL information
	  - Closes GParted bug #529625

2008-04-25  Curtis Gedak  <gedakc@gmail.com>

	* README: Updated to better align with GNU coding standards

2008-04-23  Curtis Gedak  <gedakc@gmail.com>

	* README: Updated installation notes and distribution notes

2008-04-21  Curtis Gedak  <gedakc@gmail.com>
