@@ -1,3 +1,8 @@
+2008-06-12  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/GParted_Core.cc: Changed 3 grammatical errors to dashes.
+	  - Closes GParted bug #533637
+
 2008-06-10  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/main.cc: Changed wording of root privilege required warning.
